--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -1,5 +1,5 @@
-<!-- wp:paragraph -->
-<p>dovrebbe essere la hp</p>
-<!-- /wp:paragraph -->
+<!-- wp:template-part {"slug":"header"} /-->
 
 <!-- wp:post-content /-->
+
+<!-- wp:template-part {"slug":"footer"} /-->
