--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -1,5 +1,13 @@
 <!-- wp:template-part {"slug":"header"} /-->
 
+<!-- wp:separator -->
+<hr class="wp-block-separator has-alpha-channel-opacity"/>
+<!-- /wp:separator -->
+
 <!-- wp:post-content /-->
+
+<!-- wp:separator -->
+<hr class="wp-block-separator has-alpha-channel-opacity"/>
+<!-- /wp:separator -->
 
 <!-- wp:template-part {"slug":"footer"} /-->
