--- a/templates/wp-custom-template-pagina-prodotto.html
+++ b/templates/wp-custom-template-pagina-prodotto.html
@@ -1,15 +1,13 @@
+<!-- wp:spacer {"height":"19px"} -->
+<div style="height:19px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
+
 <!-- wp:template-part {"slug":"header"} /-->
-
-<!-- wp:post-content /-->
-
-<!-- wp:separator -->
-<hr class="wp-block-separator has-alpha-channel-opacity"/>
-<!-- /wp:separator -->
 
 <!-- wp:group {"metadata":{"name":"sezione hero"},"layout":{"type":"constrained"}} -->
 <div class="wp-block-group"><!-- wp:columns {"verticalAlignment":"center"} -->
 <div class="wp-block-columns are-vertically-aligned-center"><!-- wp:column {"verticalAlignment":"center"} -->
-<div class="wp-block-column is-vertically-aligned-center"><!-- wp:acf/carosello-hero-img {"name":"acf/carosello-hero-img","data":{"carosello-hero-img":["77","83"],"_carosello-hero-img":"field_6916453f5d25c"},"mode":"preview"} /--></div>
+<div class="wp-block-column is-vertically-aligned-center"><!-- wp:acf/carosello-hero-img {"name":"acf/carosello-hero-img","data":{"carosello-hero-img":["83","92","94","91","93","95"],"_carosello-hero-img":"field_6916453f5d25c"},"mode":"preview"} /--></div>
 <!-- /wp:column -->
 
 <!-- wp:column {"verticalAlignment":"center"} -->
@@ -19,13 +17,23 @@
 
 <!-- wp:paragraph -->
 <p>Le storie e le emozioni della tua famiglia sono un tesoro unico.<br><br>Non lasciare che svaniscano nel tempo: custodiscile ora, prima che diventino solo ricordi lontani.</p>
-<!-- /wp:paragraph --></div>
+<!-- /wp:paragraph -->
+
+<!-- wp:buttons -->
+<div class="wp-block-buttons"><!-- wp:button {"backgroundColor":"viola"} -->
+<div class="wp-block-button"><a class="wp-block-button__link has-viola-background-color has-background wp-element-button">Acquista ora</a></div>
+<!-- /wp:button --></div>
+<!-- /wp:buttons --></div>
 <!-- /wp:column --></div>
 <!-- /wp:columns -->
 
-<!-- wp:heading -->
-<h2 class="wp-block-heading"></h2>
+<!-- wp:heading {"textAlign":"center"} -->
+<h2 class="wp-block-heading has-text-align-center">Le vostre emozioni...</h2>
 <!-- /wp:heading --></div>
 <!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"testimonianze"} /-->
+
+<!-- wp:post-content /-->
 
 <!-- wp:template-part {"slug":"footer"} /-->
